# tinyaudio

./: .clang-format  .gitmodules  Cargo.toml  README.md  build.sh  test.sh  version.sh
.github/: dependabot.yml
.github/workflows/: test.yml
miniaudio-sys/: Cargo.toml  build.rs
miniaudio-sys/src/: lib.rs
tinyaudio/: Cargo.toml
tinyaudio-cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  doctest.cmake  miniaudio.cmake  test.sh
tinyaudio-cpp/cmake/: miniaudio.cmake
tinyaudio-cpp/include/: tinyaudio.hpp
tinyaudio-cpp/src/: codec_stream.hpp  common.hpp  decoder.hpp  device.hpp  device_stream.hpp  encoder.hpp  error.hpp  format.hpp  stream.hpp  tinyaudio.cpp
tinyaudio-python/: .gitignore  README.md  build.sh  pyproject.toml  setup.py  test.py  test.sh
tinyaudio-python/src/: lib.cpp
tinyaudio-python/tests/: test.py
tinyaudio/src/: decoder.rs  device.rs  encoder.rs  format.rs  frames.rs  lib.rs  miniaudio_error.rs  offline_stream.rs  sample.rs
tinyaudio/src/stream/: codec_stream.rs  device_stream.rs  mod.rs  offline_stream.rs  stream.rs
