[project]
name = "tinyaudio"
description = "A tiny library for audio I/O."
urls = { hompage = "https://github.com/supertone-inc/tinyaudio/tree/main/tinyaudio-python" }
dependencies = ["numpy >= 1.7.0"]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { file = "VERSION" }
